methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:30: error: not found: value SetCouleurBrosse
  SetCouleurBrosse(Color.c)
  ^FlowerPot:30: error: value c is not a member of object java.awt.Color
  SetCouleurBrosse(Color.c)
                         ^